--- a/assets/delivery-tapioca-comentada.html
+++ b/assets/delivery-tapioca-comentada.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<!-- 
+<!-- ⚙️
 <!DOCTYPE html> é a declaração do tipo de documento. 
 Ela informa ao navegador que este é um documento HTML5, 
 permitindo que ele interprete corretamente a estrutura e os elementos da página. 
 Essa linha deve ser a primeira do arquivo HTML e não é uma tag HTML, 
 mas uma instrução ao navegador sobre qual versão do HTML está sendo usada.
+  OBSERVAÇÃO: EM UM ARQUIVO HTML TEMOS TAGS GENÉRICAS QUE SIGNIFICAM QUE NÃO IRÃO MUDAR 
+INDEPENDENTE DO SITE, ESTAS TAGS IREI SINALIZAR COM '⚙️' NO INÍCIO DO COMENTÁRIO,
+CASO VOCÊ QUEIRA SE APROFUNDAR EM COMO ELA REALMENTE FUNCIONA, VOCÊ PODE FAZER BUSCAS 
+OU PERGUNTAR PARA AS INTELIGÊNCIAS ARTIFICIAIS DO MERCADO ATUAL,  PARA AS TAGS QUE 
+VOCÊ DEVE ALTERAR COM OS DADOS SEU NEGÓCIO IREI MARCAR COM ⚠️.
 -->
 <html lang="pt-BR"> 
-<!--
+<!-- ⚙️
 <html lang="pt-BR"> é utilizada para declarar qual a linguagem da sua página,
  no nosso caso, estamos declarando ao navegador que nossa página está em português.
  -->
