--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
  
 
-<!-- a teg abaixo é usada para transferir para outra página
-<meta http-equiv="refresh" content="0;url=delivery.html">
--->
+<!-- a teg abaixo é usada para transferir para outra página-->
+<meta http-equiv="refresh" content="0;url=assets/delivery/">
+
 
 
   <!-- Google Fonts -->
