--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
-  <!-- Seu CSS personalizado -->
-  <link rel="stylesheet" href="assets/css/index.css" />
+  <!-- Seu CSS personalizado 
+  <link rel="stylesheet" href="assets/css/index.css" /> -->
 </head>
 
 <body>
