--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
  
 
-<!-- a teg abaixo é usada para transferir para outra página-->
-<meta http-equiv="refresh" content="0;url=assets/delivery/">
+<!-- a teg abaixo é usada para transferir para outra página
+<meta http-equiv="refresh" content="0;url=assets/delivery/">  -->
 
 
 
@@ -88,8 +88,8 @@
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
-  <!-- Seu CSS personalizado 
-  <link rel="stylesheet" href="assets/css/index.css" /> -->
+  <!-- Seu CSS personalizado -->
+  <link rel="stylesheet" href="assets/css/index.css" /> 
 </head>
 
 <body>
