--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 
  
 
-<!-- a teg abaixo é usada para transferir para outra página
-<meta http-equiv="refresh" content="0;url=assets/delivery/">  -->
+<!-- 
+ a teg abaixo é usada para transferir para outra página
+meta http-equiv="refresh" content="0;url=assets/delivery/"  
+ -->
 
 
 
