--- a/index.html
+++ b/index.html
@@ -85,25 +85,49 @@
   <!-- Seu CSS personalizado -->
   <link rel="stylesheet" href="assets/css/index.css" /> 
 </head>
-
-<body>
-
-<!-- ################################## -->
-<!-- ################################## -->
-<!-- ################################## -->
-<!-- ################################## -->
-<!-- ################################## -->
-<!-- ################################## -->
- <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>Loja Online</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-</head>
 <body class="bg-light">
+
+
+<!-- ################################## -->
+<!-- ################################## -->
+<!-- ################################## -->
+<!-- ################################## -->
+<!-- ################################## -->
+<!-- ################################## -->
+ 
+
+
+     <style>
+        
+        header {
+            background-color: #0a192f; /* azul escuro bonito */
+            color: white;
+            text-align: center;
+            padding: 60px 20px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        header p {
+            font-size: 1.5em;
+            margin-top: 10px;
+            color: #a8b2d1;
+        }
+    </style>
+
+    <header>
+        <h1>Aristides BP</h1>
+        <p>Desenvolvedor Full Stack</p>
+    </header>
+
+
+
+
+ 
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
