--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html><!-- Declarando que este documento é do tipo HTML5 --> 
-
 <!-- ################################################ -->
 <!-- 🧠 CONFIGURAÇÃO BÁSICA DA PÁGINA-->
 <!-- Define o idioma da página como português do Brasil -->
@@ -14,8 +13,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
 <!-- Título da aba do navegador -->
 <title>AristidesBP Cursos | Aprenda Programação e Web</title>
-
-
 <!-- ################################################ -->
 <!-- 🧠 SEO (Search Engine Optimization)-->
 <!-- Meta descrição Descrição para mecanismos de busca (texto que aparece abaixo do título no Google) -->
@@ -28,8 +25,6 @@
 <meta name="robots" content="index, follow"> <!-- index = indexar; follow = seguir links internos -->
 <!-- Canonical (evita conteúdo duplicado em URLs diferentes) -->
 <link rel="canonical" href="https://aristidesbp.github.io/" />
-
-
 <!-- ################################################ -->
 <!-- 🧠 Open Graph (para compartilhamento no Facebook, LinkedIn, etc.) -->
 <!-- Tipo de conteúdo -->
@@ -42,8 +37,6 @@
 <meta property="og:description" content="Conheça os projetos e estratégias digitais de Aristides Barbosa Pontes, especialista em desenvolvimento web e tráfego pago."> 
 <!-- Imagem do card -->  
 <meta property="og:image" content="./img/Aristidesbp.png"> 
-
-
 <!-- ################################################ -->
 <!-- 🧠 Twitter Card (para compartilhamento no Twitter) -->
 <!-- Tipo de card -->
@@ -52,14 +45,9 @@
 <meta name="twitter:description" content="Confira meus projetos e estratégias como desenvolvedor front-end e gestor de tráfego.">
 <meta name="twitter:image" content="https://aristidesbp.github.io/img/Aristidesbp.png">
 <meta name="twitter:site" content="@aristidesbp"> <!-- Seu @ do Twitter, se tiver -->
-
-
 <!-- ################################################ -->
 <!-- 🧠 Manifest (para Progressive Web Apps – PWA) -->
 <link rel="manifest" href="json/site-mvc-manifest.json">
- 
-
-
 <!-- ################################################ -->
 <!-- 🧠 ARQUIVOS EXTERNOS DE ESTILO (FONTS + CSS) -->
 <!-- Pré-carregamento para fontes do Google (melhora desempenho) -->
@@ -71,22 +59,16 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet"> 
 <link href="icons/favicon.png" type="image/x-icon" rel="shortcut icon"/><!-- Estilo CSS externo -->
 <link rel="stylesheet" href="markdown.css">
-
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap" rel="stylesheet" />
-
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
-  <!-- Seu CSS personalizado -->
-  <link rel="stylesheet" href="assets/css/index.css" /> 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap" rel="stylesheet" />
+<!-- Tailwind CSS -->
+<script src="https://cdn.tailwindcss.com"></script>
+<!-- AOS -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+<!-- Seu CSS personalizado -->
+<link rel="stylesheet" href="assets/css/index.css" /> 
 </head>
 <body class="bg-light">
-
 
 <!-- ################################## -->
 <!-- ################################## -->
@@ -337,7 +319,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+<script src="assets/js/index.js"></script>
 
 
 
