--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   ===========================================
   ARISTIDESBP PORTFÓLIO + LOJA VIRTUAL
   ===========================================
-  Reorganizado e comentado para máxima clareza.
+  Comentado para máxima clareza. Rodapé agora está fixo no final da página!
 -->
 <html lang="pt-BR">
 <head>
@@ -213,7 +213,44 @@
     <div class="row" id="itemContainer"></div>
   </div>
 
-  
+  <!--
+    =========================
+    SEÇÃO DE SERVIÇOS (EXIBIÇÃO ESTÁTICA)
+    =========================
+  -->
+  <section>
+    <h2 class="titulo-secao">Serviços</h2>
+    <div class="servicos">
+      <div class="card-servico">
+        <h3>Desenvolvimento Web</h3>
+        <p>Criação de sites profissionais, landing pages e portfólios modernos com HTML, CSS, JavaScript e frameworks.</p>
+      </div>
+      <div class="card-servico">
+        <h3>Mentoria em Programação</h3>
+        <p>Aulas práticas e personalizadas para quem quer aprender lógica, front-end e boas práticas no desenvolvimento.</p>
+      </div>
+      <div class="card-servico">
+        <h3>Criação de Aplicativos</h3>
+        <p>Aplicativos móveis Android com interface moderna e uso de banco de dados local, ideal para negócios.</p>
+      </div>
+      <div class="card-servico">
+        <h3>Gestão de Tráfego Pago</h3>
+        <p>Criação de campanhas otimizadas no Google Ads e Meta Ads para atrair clientes e aumentar suas vendas.</p>
+      </div>
+    </div>
+  </section>
+
+  <!--
+    =========================
+    SEÇÃO SOBRE MIM (RODAPÉ)
+    =========================
+  -->
+  <section class="sobre-mim">
+    <h2 class="titulo-secao" style="color: white;">Sobre Mim</h2>
+    <p>
+      Olá! Sou <strong>AristidesBP</strong>, Analista de Sistemas com experiência em desenvolvimento front-end e mobile usando AndroidIDE. Atuo também como mentor de programação e gestor de tráfego pago. Acredito que o código perfeito é o código comentado, e tenho como missão ensinar, criar soluções práticas e entregar projetos de alta qualidade para meus clientes.
+    </p>
+  </section>
 
   <!--
     =========================
@@ -221,6 +258,7 @@
     =========================
     Inclui player, barra de progresso, volume e seleção de faixas.
     Todos componentes ficam dentro do container!
+    (Agora SEM footer/rodapé dentro da caixa!)
   -->
   <div id="radio-float">
     <!-- Botão de tema claro/escuro -->
@@ -235,6 +273,7 @@
       <div class="music-controls-row">
         <button id="bgMusicBtn" title="Play/Pause">🎵</button>
         <button id="vol-down" title="Diminuir volume">➖</button>
+        <input id="vol-slider" type="range" min="0" max="1" step="0.01" value="0.2" aria-label="Volume">
         <button id="vol-up" title="Aumentar volume">➕</button>
       </div>
       <!-- Linha de seleção de faixa e repetição -->
@@ -248,7 +287,9 @@
           <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-6.mp3">Trilha 6</option>
           <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-7.mp3">Trilha 7</option>
           <option value="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3">Trilha 8</option>
-         
+          <option value="https://cdn.pixabay.com/audio/2023/02/10/audio_12c6a1d6bb.mp3">Jazz Suave</option>
+          <option value="https://cdn.pixabay.com/audio/2022/12/19/audio_12f5e4b66b.mp3">Ambiental Chill</option>
+          <option value="https://cdn.pixabay.com/audio/2022/10/16/audio_12a8f0d3f4.mp3">Piano Relaxante</option>
         </select>
         <input type="checkbox" id="repeatMusic" style="accent-color:#007BFF;" title="Repetir faixa">
         <label for="repeatMusic" title="Repetir faixa" style="font-size:1.05em;cursor:pointer;">🔁</label>
@@ -264,10 +305,11 @@
 
   <!--
     =========================
-    RODAPÉ FINAL
+    RODAPÉ FINAL FIXO
     =========================
+    Agora fixo no final da página, fora da caixa de som flutuante!
   -->
-  <footer class="footer-final">
+  <footer class="footer-final-fixed">
     <p>&copy; 2016 Aristides Barbosa Pontes - Todos os direitos reservados.
       <a href="#privacy-policy">Política de Privacidade</a>
     </p>
