--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body text-center">
-          <img src="assets/img/logoAbp.jpg" alt="Logo AristidesBP" style="max-width: 180px; border-radius: 12px; margin-bottom: 1rem;">
+          <img src="assets/img/Aristidesbp.png" alt="Logo AristidesBP" style="max-width: 180px; border-radius: 12px; margin-bottom: 1rem;">
           <p style="margin-top:1rem">
             Olá! Sou <strong>AristidesBP</strong>, Analista de Sistemas com experiência em desenvolvimento front-end e mobile usando AndroidIDE.
             Atuo também como mentor de programação e gestor de tráfego pago.<br><br>
