--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>AristidesBP - Portfólio & Loja</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/index.css" />
+  <link rel="stylesheet" href="index.css" />
   <link rel="icon" type="image/png" href="icons/favicon.png">
 </head>
 <body class="bg-light">
@@ -235,6 +235,6 @@
   </footer>
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
