--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
   <!-- CAIXA FLUTUANTE DA RÁDIO E BOTÃO DE TEMA -->
   <div id="radio-float">
     <button id="theme-toggle" title="Alternar tema">🌓</button>
-    <button id="radio-float-toggle" title="Mostrar/Ocultar Rádio">🎵</button>
+    <button id="radio-float-toggle" title="Mostrar/Ocultar Rádio">🟰</button>
     <div id="radio-float-content">
       <audio id="hoverSound" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfae1b4.mp3" preload="auto"></audio>
       <audio id="bgMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
       <div class="music-controls-row">
-        <button id="bgMusicBtn" title="Play/Pause">🎵</button>
+        <button id="bgMusicBtn" title="Play/Pause">▶️</button>
         <button id="vol-down" title="Diminuir volume">➖</button>
-        <input id="vol-slider" type="range" min="0" max="1" step="0.01" value="0.2" aria-label="Volume">
+        
         <button id="vol-up" title="Aumentar volume">➕</button>
       </div>
       <div class="music-controls-row">
