--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
       <audio id="bgMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
       <div class="music-controls-row">
         <button id="bgMusicBtn" title="Play/Pause">▶️</button>
-        <!-- <button id="vol-down" title="Diminuir volume">➖</button> -->
+        <button id="vol-down" title="Diminuir volume">➖</button> 
+        <button id="vol-up" title="Aumentar volume">➕</button> 
         <input id="vol-slider" type="range" min="0" max="1" step="0.01" value="0.2" aria-label="Volume">
-        <!-- <button id="vol-up" title="Aumentar volume">➕</button> -->
+        
       </div>
       <div class="music-controls-row">
         <select id="music-select" title="Escolha a trilha">
