--- a/assets/projetos/portifolio/index.html
+++ b/assets/projetos/portifolio/index.html
@@ -110,3 +110,16 @@
   <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site">
     Carregando footer...
   </footer>
+
+    <!-- 🔧 Scripts externos e principais -->
+  <!-- 🧠 Prompt: Importe bibliotecas modernas que melhorem animações e interação. Scripts devem ser carregados no final para performance. Use defer e async quando necessário. -->
+  <script src="https://unpkg.com/scrollreveal" defer></script> <!-- Efeitos de scroll reveal -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
+
+  <!-- 🧠 Prompt: Carregue o script principal do site com type="module" para suportar import/export. Use defer para não bloquear renderização. -->
+  <script src="js/site-mvc-main.js" type="module" defer></script>
+  <script src="assets/js/index.js" defer></script>
+</body>
+</html>
