--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
 
 <!-- 🧠 Prompt: Crie uma seção "Sobre Mim" com layout responsivo, imagem de perfil, texto institucional e visual de confiança. Deve ter tipografia moderna, animações suaves e ser plugável em outras páginas. -->
 
-<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes">
-  Carregando sobre...
-</section>
-<script src="sobre.js"></script>
+<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes">  Carregando sobre...</section>
+<script src="assets/projetos/portifolio/sobre.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
 
 
