--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
 
    <!-- 🧠 Prompt: Crie uma seção com cards de serviços com design elegante e botão “saiba mais” que expande a descrição. Os cards devem ser animados e ter aparência premium. Componente modular e independente. -->
-    <section id="componente-servicos" aria-label="Serviços oferecidos"> Carregando serviços...    </section>
-   <script src="assets/projetos/portifolio/servicos.js"></script>
+    <section id="componente-projetos" aria-label="Serviços oferecidos"> Carregando projetos...    </section>
+   <script src="assets/projetos/portifolio/projetos.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
 
 
