--- a/assets/projetos/portifolio/index.html
+++ b/assets/projetos/portifolio/index.html
@@ -58,7 +58,7 @@
 🧩 Este componente será chamado com o seguinte código no HTML:
 -->
 <header id="componente-Header" role="banner" aria-label="Cabeçalho principal">Carregando header...</header>
-<script src="header.js"></script>
+<script src="assets/header.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHeader);</script>
 
 
@@ -66,7 +66,7 @@
 
   <!-- 🧠 Prompt: Crie um componente de navbar fixo e responsivo, com botão hamburguer moderno, efeito sticky e sombra dourada. Deve conter navegação fluida e visual marcante em preto e dourado. Independente e reutilizável. -->
   <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal">    Carregando navbar...  </nav>
-  <script src="navbar.js"></script>
+  <script src="assets/navbar.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarNavbar);</script>
 
   <main>
@@ -75,30 +75,39 @@
 
   <!-- 🧠 Prompt: Crie um componente "hero" com chamada à ação forte, CTA chamativo e layout responsivo. Deve induzir o cliente a clicar e se interessar pelos serviços, usando fontes grandes e contraste forte. -->
   <section id="componente-hero" aria-label="Chamada de ação principal">      Carregando hero...    </section>
-  <script src="hero.js"></script>
+  <script src="assets/hero.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarHero);</script>
 
  
 
 
-   <!-- 🧠 Prompt: Crie uma seção com cards de serviços com design elegante e botão “saiba mais” que expande a descrição. Os cards devem ser animados e ter aparência premium. Componente modular e independente. -->
+<!-- 🧠 Prompt: Crie uma seção com cards de serviços com design elegante e botão “saiba mais” que expande a descrição. Os cards devem ser animados e ter aparência premium. Componente modular e independente. -->
     <section id="componente-servicos" aria-label="Serviços oferecidos"> Carregando serviços...    </section>
-   <script src="servicos.js"></script>
+   <script src="assets/servicos.js"></script>
   <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
 
 
 
+  
+
+
+<!-- 🧠 Prompt: Crie uma seção "Sobre Mim" com layout responsivo, imagem de perfil, texto institucional e visual de confiança. Deve ter tipografia moderna, animações suaves e ser plugável em outras páginas. -->
+
+<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes">  Carregando sobre...</section>
+<script src="assets/sobre.js"></script>
+<script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
+
+
+
 <!-- 🧠 Prompt: Crie um slide de serviços em formato de carrossel moderno com imagens que representem os serviços oferecidos. Design limpo, responsivo, com animações suaves. Deve ser autônomo e plugável em outras páginas. -->
-    <section id="componente-slide" aria-label="Apresentação visual de serviços">      Carregando slide...    </section>
-<script src="slide.js"></script>
+<section id="componente-slide" aria-label="Apresentação visual de serviços">      Carregando slide...    </section>
+<script src="assets/slide.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSlide);</script>
-
-
 
 
 <!-- 🧠 Prompt: Crie um formulário completo para captação de leads, com checklist de serviços, campos de contato, validação e envio via WhatsApp. Layout profissional, responsivo e acessível. Independente e plugável. -->
 <section id="main-formularioContato" aria-label="Formulário de contato"> Carregando formulário... </section>
-<script src="formularioContato.js"></script>
+<script src="assets/formularioContato.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarFormularioContato);</script>
 
 
@@ -107,11 +116,13 @@
 
 
   <!-- 🧠 Prompt: Crie um rodapé elegante com redes sociais, links institucionais e copyright. Estilo dark, com ícones modernos. Deve ser compacto no mobile e completo no desktop. Reutilizável e independente. -->
-  <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site">
-    Carregando footer...
-  </footer>
+  <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site"> Carregando footer...  </footer>
+<script src="assets/footer.js"></script>
+<script>document.addEventListener('DOMContentLoaded', criarFooter);</script>
 
-    <!-- 🔧 Scripts externos e principais -->
+
+
+  <!-- 🔧 Scripts externos e principais -->
   <!-- 🧠 Prompt: Importe bibliotecas modernas que melhorem animações e interação. Scripts devem ser carregados no final para performance. Use defer e async quando necessário. -->
   <script src="https://unpkg.com/scrollreveal" defer></script> <!-- Efeitos de scroll reveal -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer></script>
