--- a/index.html
+++ b/index.html
@@ -1,136 +1,83 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <!-- ✅ Estrutura básica com foco em SEO, performance e compartilhamento social -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Aristides Barbosa Pontes // Portfólio</title>
+<!-- likns de Cursos ########################################################################### -->
+<section class="column" id="Cursos"> <h2>Links para Cursos</h2><ul class="lista-links">
+<li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
+<li><a href="https://www.escolavirtual.gov.br/" target="_blank">escolavirtual.gov</a></li>
+<li><a href="https://estude.ifrs.edu.br/" target="_blank">estude.ifrs</a></li>     
+<li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+<li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a></li>
+<li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
+<li><a href="aulas-txt.html" target="_blank">MATERIAL.txt</a></li>
+</ul>
+</section>
+ 
+ <!-- likns de Empregos-Freelance ########################################################################### -->
+<section class="column" id="Empregos-Freelance"><h2>likns para Empregos-Freelance</h2> <ul class="lista-links"> 
+<li><a href="https://www.linkedin.com/jobs/" target="_blank">LinkedIn Jobs</a></li>     <!-- Vagas de emprego -->
+<li><a href="https://www.fiverr.com/" target="_blank">Fiverr</a></li>                   <!-- Trabalhos freelance globais -->
+<li><a href="https://www.workana.com/" target="_blank">Workana</a></li>                 <!-- Freelance na América Latina -->
+<li><a href="https://www.freelancer.com/" target="_blank">Freelancer</a></li>           <!-- Plataforma internacional -->
+<li><a href="https://remoteok.com/" target="_blank">RemoteOK</a></li>                   <!-- Trabalhos remotos internacionais -->
+</ul>
+</section>
 
-  <!-- ✅ SEO para posicionamento no Google -->
-  <meta name="description" content="Sou Aristides Barbosa Pontes, desenvolvedor front-end e gestor de tráfego pago. Veja meu portfólio com projetos em HTML, CSS, JavaScript, AndroidIDE e estratégias de marketing digital.">
-  <meta name="author" content="Aristides Barbosa Pontes">
-  <meta name="keywords" content="portfólio, Aristides Barbosa Pontes, front-end, desenvolvedor, HTML, CSS, JavaScript, tráfego pago, marketing digital, programador web, projetos web, sites profissionais, developer, programação, dev, desenvolvedor, programador, html, css, javascript, nodejs, reactjs, react, github, frontend, front-end">
-  <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://aristidesbp.github.io/" />
+<!-- Redes-Sociais ########################################################################### -->
+<section class="column" id="Redes-Sociais"><h2>links de Redes-Sociais</h2> 
+<ul class="lista-links">
+<li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
+<li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+<li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
+<li><a href="https://www.twitter.com/" target="_blank">Twitter (X)</a></li>
+<li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+<li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
+</ul>
+</section>
+       
+<!-- Testes-Projetos ########################################################################### -->
+<section class="column" id="Testes-Projetos"><h2>Testes-Projetos</h2><ul class="lista-links">
+<li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">Portfólio Google Sites</a></li>
+<li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
+<li><a href="Abp-radio.html" target="_blank">Abp-radio.html</a></li>
+<li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
+<li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
+<li><a href="lista-de-tarefas2.html" target="_blank">lista-de-tarefas2.html</a></li>
+<li><a href="plays.html" target="_blank">plays.html</a></li>
+<li><a href="portifolio-interativo.html" target="_blank">portifolio-interativo.html</a></li>
+<li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>
+</ul>
+</section>
 
-  <!-- ✅ Compartilhamento em redes sociais (Open Graph & Twitter Card) -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://aristidesbp.github.io/">
-  <meta property="og:title" content="Portfólio de Aristides Barbosa Pontes – Dev Front-End e Gestor de Tráfego">
-  <meta property="og:description" content="Conheça os projetos e estratégias digitais de Aristides Barbosa Pontes, especialista em desenvolvimento web e tráfego pago.">
-  <meta property="og:image" content="https://aristidesbp.github.io/img/Aristidesbp.png">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Portfólio de Aristides Barbosa Pontes – Dev & Tráfego Pago">
-  <meta name="twitter:description" content="Confira meus projetos e estratégias como desenvolvedor front-end e gestor de tráfego.">
-  <meta name="twitter:image" content="https://aristidesbp.github.io/img/Aristidesbp.png">
-  <meta name="twitter:site" content="@aristidesbp">
-
-  <!-- PWA e Favicon -->
-  <link rel="manifest" href="json/site-mvc-manifest.json">
-  <link rel="icon" href="icons/favicon.png" type="image/x-icon"/>
-
-  <!-- Fonts & CSS -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/index.css">
-</head>
-
-<body>
-
- <!-- 
-🤖 Prompt para IA: Crie um componente modular de header (cabeçalho) com as seguintes características:
-
-1. Deve conter um *slideshow de imagens de fundo* em tela cheia com transição suave (ex: `@keyframes`), ocupando 100% da altura da viewport (`100vh`).
-2. Imagens devem cobrir todo o fundo com `background-size: cover` e `background-position: center`, sem bordas brancas no topo ou nas laterais.
-3. Sobre o slideshow, aplique um *overlay escuro* (semi-transparente) para destacar o conteúdo textual acima das imagens.
-4. No centro da tela, insira um título (`h1`) com frase de efeito e uma `p` com subtítulo. Ambos devem ter animações de entrada suaves (ex: `fadeInUp`).
-5. Tipografia moderna, legível e com destaque visual. Use fontes como "DM Sans" ou similares via Google Fonts.
-6. O design deve ser responsivo: fontes menores no mobile, sem quebrar layout.
-7. Deve ser reutilizável/modular, injetado via função JavaScript `criarHeader()` e chamado por ID.
-8. Não usar classes genéricas globais, todo estilo deve ser escopado para evitar conflitos.
-9. Compatível com navegadores modernos, sem uso de bibliotecas externas.
-
-🧩 Este componente será chamado com o seguinte código no HTML:
--->
-<header id="componente-Header" role="banner" aria-label="Cabeçalho principal"></header>
-<script src="assets/projetos/portifolio/header.js"></script>
-<script>document.addEventListener('DOMContentLoaded', criarHeader);</script>
-
-
-
-
-  <!-- 🧠 Prompt: Crie um componente de navbar fixo e responsivo, com botão hamburguer moderno, efeito sticky e sombra dourada. Deve conter navegação fluida e visual marcante em preto e dourado. Independente e reutilizável. -->
-  <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal"></nav>
-  <script src="assets/projetos/portifolio/navbar.js"></script>
-  <script>document.addEventListener('DOMContentLoaded', criarNavbar);</script>
-
-  <main>
-
-
-
-  <!-- 🧠 Prompt: Crie um componente "hero" com chamada à ação forte, CTA chamativo e layout responsivo. Deve induzir o cliente a clicar e se interessar pelos serviços, usando fontes grandes e contraste forte. -->
-  <section id="componente-hero" aria-label="Chamada de ação principal"></section>
-  <script src="assets/projetos/portifolio/hero.js"></script>
-  <script>document.addEventListener('DOMContentLoaded', criarHero);</script>
-
-
-
- <!-- 🧠 Prompt: Crie um slide de serviços em formato de carrossel moderno com imagens que representem os serviços oferecidos. Design limpo, responsivo, com animações suaves. Deve ser autônomo e plugável em outras páginas. -->
-    <section id="componente-slide" aria-label="Apresentação visual de serviços"></section>
-<script src="assets/projetos/portifolio/slide.js"></script>
-<script>document.addEventListener('DOMContentLoaded', criarSlide);</script>
-
-
-
-<!-- 🧠 Prompt: Crie uma seção "Sobre Mim" com layout responsivo, imagem de perfil, texto institucional e visual de confiança. Deve ter tipografia moderna, animações suaves e ser plugável em outras páginas. -->
-
-<section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes"></section>
-<script src="assets/projetos/portifolio/sobre.js"></script>
-<script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
-
-
-
-   <!-- 🧠 Prompt: Crie uma seção com cards de serviços com design elegante e botão “saiba mais” que expande a descrição. Os cards devem ser animados e ter aparência premium. Componente modular e independente. -->
-    <section id="componente-projetos" aria-label="Serviços oferecidos"> </section>
-   <script src="assets/projetos/portifolio/projetos.js"></script>
-  <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
-
-
-
-
-
-
-
-
-<!-- 🧠 Prompt: Crie um formulário completo para captação de leads, com checklist de serviços, campos de contato, validação e envio via WhatsApp. Layout profissional, responsivo e acessível. Independente e plugável. -->
-<section id="main-formularioContato" aria-label="Formulário de contato"> </section>
-<script src="assets/projetos/portifolio/formularioContato.js"></script>
-<script>document.addEventListener('DOMContentLoaded', criarFormularioContato);</script>
-
-
-  </main>
-
-
-
-  <!-- 🧠 Prompt: Crie um rodapé elegante com redes sociais, links institucionais e copyright. Estilo dark, com ícones modernos. Deve ser compacto no mobile e completo no desktop. Reutilizável e independente. -->
-  <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site">
-    Carregando footer...
-  </footer>
-
-    <!-- 🔧 Scripts externos e principais -->
-  <!-- 🧠 Prompt: Importe bibliotecas modernas que melhorem animações e interação. Scripts devem ser carregados no final para performance. Use defer e async quando necessário. -->
-  <script src="https://unpkg.com/scrollreveal" defer></script> <!-- Efeitos de scroll reveal -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
-
-  <!-- 🧠 Prompt: Carregue o script principal do site com type="module" para suportar import/export. Use defer para não bloquear renderização. -->
-  <script src="js/site-mvc-main.js" type="module" defer></script>
-  <script src="assets/js/index.js" defer></script>
-</body>
-</html>
+<!-- Seção de Inteligência Artificial ########################################################################### -->
+<section class="column" id="Inteligência-Artificial"><h2>Inteligência Artificial</h2> <ul class="lista-links"> 
+<li><a href="https://chatgpt.com/" target="_blank"><strong>ChatGPT</strong></a> – Assistente de conversas, redação e programação.</li>
+<li><a href="https://claude.ai/" target="_blank"><strong>Claude AI</strong></a> – Alternativa ao ChatGPT com foco em respostas seguras e longas.</li>
+<li><a href="https://gemini.google.com/app?hl=pt-BR" target="_blank"><strong>Google Gemini</strong></a> – IA multimodal do Google integrada a seus produtos.</li>
+<li> <a href="https://copilot.microsoft.com/" target="_blank"><strong>Microsoft Copilot</strong></a> – Assistente integrado ao Windows e Microsoft Office.</li>
+<li><a href="https://www.perplexity.ai/" target="_blank"><strong>Perplexity AI</strong></a> – IA com respostas baseadas em busca contextual.</li>
+<li><a href="https://www.phind.com/" target="_blank"><strong>Phind</strong></a> – Especializada para programadores, com busca técnica.</li>
+<li><a href="https://www.midjourney.com/" target="_blank"><strong>Midjourney</strong></a> – Geração de imagens artísticas com IA.</li>
+<li><a href="https://openai.com/dall-e" target="_blank"><strong>DALL·E</strong></a> – Criação de imagens realistas a partir de texto.</li>
+<li><a href="https://stablediffusionweb.com/" target="_blank"><strong>Stable Diffusion</strong></a> – Modelo open source para criação de imagens.</li>
+<li><a href="https://runwayml.com/" target="_blank"><strong>Runway ML</strong></a> – Geração e edição de vídeos com IA.</li>
+<li><a href="https://www.elevenlabs.io/" target="_blank"><strong>ElevenLabs</strong></a> – Geração de vozes realistas com IA.</li>
+<li><a href="https://www.synthesia.io/" target="_blank"><strong>Synthesia</strong></a> – Criação de vídeos com avatares gerados por IA.</li>
+<li><a href="https://www.canva.com/pt_br/recursos/canva-ai/" target="_blank"><strong>Canva AI</strong></a> – Ferramentas de design com auxílio de IA.</li>
+<li><a href="https://www.deepl.com/translator" target="_blank"><strong>DeepL</strong></a> – Tradutor de alta qualidade com IA.</li>
+<li><a href="https://www.notion.so/product/ai" target="_blank"><strong>Notion AI</strong></a> – Auxilia na organização de ideias e documentos.</li>
+<li><a href="https://www.grammarly.com/" target="_blank"><strong>Grammarly AI</strong></a> – Correção de textos e sugestões de estilo.</li>
+<li><a href="https://poe.com/" target="_blank"><strong>Poe</strong></a> – Plataforma que reúne vários modelos de IA como ChatGPT, Claude e Gemini.</li>
+<li><a href="https://www.jasper.ai/" target="_blank"><strong>Jasper AI</strong></a> – Geração de conteúdo para marketing.</li>
+<li><a href="https://www.copy.ai/" target="_blank"><strong>Copy.ai</strong></a> – Escrita de textos publicitários e vendas.</li>
+<li><a href="https://writesonic.com/" target="_blank"><strong>Writesonic</strong></a> – IA para blogs, anúncios e redes sociais.</li>
+<li><a href="https://rytr.me/" target="_blank"><strong>Rytr</strong></a> – Escrita rápida para diversos formatos.</li>
+<li><a href="https://www.sudowrite.com/" target="_blank"><strong>Sudowrite</strong></a> – IA para escritores criativos.</li>
+<li><a href="https://app.leonardo.ai/" target="_blank"><strong>Leonardo AI</strong></a> – Ferramenta poderosa para geração de imagens criativas.</li>
+<li><a href="https://www.figma.com/ai/" target="_blank"><strong>Flux AI</strong></a> – IA para design assistido em interfaces digitais.</li>
+<li><a href="https://www.recraft.ai/" target="_blank"><strong>Recraft</strong></a> – Design gráfico assistido por IA para marcas e produtos.</li>
+<li><a href="https://ideogram.ai/" target="_blank"><strong>Ideogram</strong></a> – Criação de diagramas e fluxogramas com IA.</li>
+<li><a href="https://filmora.wondershare.com/video-editor/" target="_blank"><strong>Filmora AI</strong></a> – Editor de vídeo com ferramentas automáticas.</li>
+<li><a href="https://www.opus.pro/" target="_blank"><strong>OpusClip</strong></a> – Converte vídeos longos em clipes curtos para redes sociais.</li>
+<li><a href="https://fathom.video/" target="_blank"><strong>Fathom</strong></a> – Transcrição e resumo automático de reuniões online. </li>
+<li><a href="https://notebooklm.google/" target="_blank"><strong>NotebookLM</strong></a> – Organiza pesquisas e anotações com IA.</li>
+<li><a href="https://n8n.io/" target="_blank"><strong>n8n</strong></a> – Plataforma de automação de fluxos com integração de IA.</li>
+</ul>
+</section>
