--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
        
 <!-- Testes-Projetos ########################################################################### -->
 <section class="column" id="Testes-Projetos"><h2>Testes-Projetos</h2><ul class="lista-links">
-<li><a href="https://sites.google.com/view/marketing-digital-abp/sobre" target="_blank">Portfólio Google Sites</a></li>
-<li><a href="index-com-radio.html" target="_blank">index-com-radio.html</a></li>
-<li><a href="Abp-radio.html" target="_blank">Abp-radio.html</a></li>
-<li><a href="ler-arquivo-json.html" target="_blank">ler-arquivo-json.html</a></li>
-<li><a href="lista-de-tarefas.html" target="_blank">lista-de-tarefas.html</a></li>
-<li><a href="lista-de-tarefas2.html" target="_blank">lista-de-tarefas2.html</a></li>
-<li><a href="plays.html" target="_blank">plays.html</a></li>
-<li><a href="portifolio-interativo.html" target="_blank">portifolio-interativo.html</a></li>
-<li><a href="portifolio-w3s.html" target="_blank">portifolio-w3s.html</a></li>
+ 
+<li><a href="assets/projetos/portifolio.html" target="_blank">portifolio</a></li>
+<li><a href="assets/projetos/minha-ide.html" target="_blank">minha-ide</a></li>
+<li><a href="assets/projetos/minha-radio.html" target="_blank">minha-radio</a></li>
+<li><a href="assets/projetos/site-vendas.html" target="_blank">site-vendas</a></li>
+<li><a href="assets/projetos/cardapio-tapioca.html" target="_blank">cardapio-tapioca</a></li>
+<li><a href="assets/projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
+<li><a href="assets/projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
+<li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
+
 </ul>
 </section>
 
