--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!-- likns de Cursos ########################################################################### -->
-<section class="column" id="Cursos"> <h2>Links para Cursos</h2><ul class="lista-links">
+<h1>ARISTIDES B PONTES</h1>
+<h2>ANALISTA DE SISTEMAS</h2>
+
+ <h2>Links para Cursos</h2>
+<ul class="lista-links">
 <li><a href="https://aprendamais.mec.gov.br/" target="_blank">aprendamais.mec.gov</a></li>
 <li><a href="https://www.escolavirtual.gov.br/" target="_blank">escolavirtual.gov</a></li>
 <li><a href="https://estude.ifrs.edu.br/" target="_blank">estude.ifrs</a></li>     
@@ -8,20 +11,19 @@
 <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
 <li><a href="aulas-txt.html" target="_blank">MATERIAL.txt</a></li>
 </ul>
-</section>
- 
- <!-- likns de Empregos-Freelance ########################################################################### -->
-<section class="column" id="Empregos-Freelance"><h2>likns para Empregos-Freelance</h2> <ul class="lista-links"> 
+
+<h2>likns para Empregos-Freelance</h2>
+<ul class="lista-links"> 
 <li><a href="https://www.linkedin.com/jobs/" target="_blank">LinkedIn Jobs</a></li>     <!-- Vagas de emprego -->
 <li><a href="https://www.fiverr.com/" target="_blank">Fiverr</a></li>                   <!-- Trabalhos freelance globais -->
 <li><a href="https://www.workana.com/" target="_blank">Workana</a></li>                 <!-- Freelance na América Latina -->
 <li><a href="https://www.freelancer.com/" target="_blank">Freelancer</a></li>           <!-- Plataforma internacional -->
 <li><a href="https://remoteok.com/" target="_blank">RemoteOK</a></li>                   <!-- Trabalhos remotos internacionais -->
 </ul>
-</section>
 
-<!-- Redes-Sociais ########################################################################### -->
-<section class="column" id="Redes-Sociais"><h2>links de Redes-Sociais</h2> 
+
+
+<h2>links de Redes-Sociais</h2> 
 <ul class="lista-links">
 <li><a href="https://github.com/aristidesbp" target="_blank">GitHub</a></li>
 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
@@ -30,11 +32,11 @@
 <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
 <li><a href="https:https://www.google.com/intl/pt-br_br/business/" target="_blank">google-business</a></li>
 </ul>
-</section>
+
        
-<!-- Testes-Projetos ########################################################################### -->
-<section class="column" id="Testes-Projetos"><h2>Testes-Projetos</h2><ul class="lista-links">
- 
+
+<h2>Testes-Projetos</h2>
+<ul class="lista-links">
 <li><a href="assets/projetos/portifolio.html" target="_blank">portifolio</a></li>
 <li><a href="assets/projetos/minha-ide.html" target="_blank">minha-ide</a></li>
 <li><a href="assets/projetos/minha-radio.html" target="_blank">minha-radio</a></li>
@@ -43,12 +45,11 @@
 <li><a href="assets/projetos/ficha-anaminese.html" target="_blank">ficha-anaminese</a></li>
 <li><a href="assets/projetos/ficha-tarefas.html" target="_blank">ficha-tarefas</a></li>
 <li><a href="portifolio-interativo.html.html target="_blank">portifolio-interativo.html</a></li>
-
 </ul>
-</section>
 
-<!-- Seção de Inteligência Artificial ########################################################################### -->
-<section class="column" id="Inteligência-Artificial"><h2>Inteligência Artificial</h2> <ul class="lista-links"> 
+
+<h2>Inteligência Artificial</h2> 
+<ul class="lista-links"> 
 <li><a href="https://chatgpt.com/" target="_blank"><strong>ChatGPT</strong></a> – Assistente de conversas, redação e programação.</li>
 <li><a href="https://claude.ai/" target="_blank"><strong>Claude AI</strong></a> – Alternativa ao ChatGPT com foco em respostas seguras e longas.</li>
 <li><a href="https://gemini.google.com/app?hl=pt-BR" target="_blank"><strong>Google Gemini</strong></a> – IA multimodal do Google integrada a seus produtos.</li>
@@ -81,4 +82,4 @@
 <li><a href="https://notebooklm.google/" target="_blank"><strong>NotebookLM</strong></a> – Organiza pesquisas e anotações com IA.</li>
 <li><a href="https://n8n.io/" target="_blank"><strong>n8n</strong></a> – Plataforma de automação de fluxos com integração de IA.</li>
 </ul>
-</section>
+
